modified:   index.html

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="preloader-inner">
             
             <span class="loader">
-                Bienvenu chez SCAM EL ELYON
-                <span class="loading-text">  Bienvenu chez SCAM EL ELYON </span>
+            SCAM EL ELYON
+                <span class="loading-text">  SCAM EL ELYON </span>
             </span>
         </div>
     </div>
