modified:   index.html

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ Section A propos
                 <div class="col-xl-4">
                     <div class="about-thumb13">
                         <div class="img1">
-                            <img class="w-100" src="assets/img/LOGO SCAM btp copie.png" alt="img" width="565" height="300">
+                            <img class="w-100" src="assets/img/LOGO SCAM BTP copie.png" alt="img" width="565" height="300">
                         </div>
                     </div>
                     <div class="about-wrap13-1">
